<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <TextView
        android:id="@+id/csalaryc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/new_trainee_signup_here"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logbtn" />

    <android.support.v7.widget.AppCompatEditText

        android:id="@+id/etname"
        android:layout_width="262dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:hint="@string/username123"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="casual"
        android:text="@string/continue_as_admin_click_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logsignup"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/logbtn"
        android:layout_width="228dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etpass" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/etpass"
        android:layout_width="262dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etname"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="170dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:entries="@array/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/csalaryc" />

</android.support.constraint.ConstraintLayout>