<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/k"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/signp"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:background="@drawable/edittextdesgn"
        android:drawableRight="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/password1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signa"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/signn"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/edittextdesgn"
        android:drawableRight="@drawable/ic_baseline_person_24"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/signa"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/edittextdesgn"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signw"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/signh"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/edittextdesgn"

        android:ems="10"
        android:hint="@string/height_in_meter"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typespinner"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/signw"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/edittextdesgn"
        android:ems="10"
        android:hint="@string/weight_in_kg"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signh" />

    <Spinner
        android:id="@+id/genderspinner"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:background="@drawable/spinnerdesign"
        android:entries="@array/gender"
        android:fontFamily="casual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toEndOf="@+id/typespinner"
        app:layout_constraintTop_toBottomOf="@+id/signn" />

    <TextView
        android:id="@+id/signlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/already_have_an_account_login"
        android:textColor="#DAD49D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signad" />

    <Button
        android:id="@+id/signad"
        android:layout_width="150dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttondesign1"
        android:drawableRight="@drawable/ic_baseline_fitness_center_24"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signp" />

    <Spinner
        android:id="@+id/typespinner"
        android:layout_width="183dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/spinnerdesign"
        android:entries="@array/typeofworkout"
        android:fontFamily="casual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="104dp"
        android:layout_height="31dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/edittextdesgn"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>