<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/k"
    tools:context=".Adminlogin">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/enter_the_password"
        android:background="@drawable/edittextdesgn"

        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/adpw"
        android:layout_width="247dp"
        android:layout_height="62dp"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="casual"
        android:background="@drawable/edittextdesgn"
        android:drawableRight="@drawable/ic_baseline_lock_24"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/adcontinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/continue2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/buttondesign1"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adpw"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>